--- a/main_css/index.css
+++ b/main_css/index.css
@@ -102,6 +102,7 @@ h2 {
 
 .main_header_forms {
     margin-bottom: 40px;
+    font-size: 2.4vw;
 }
 
 p {
@@ -119,9 +120,9 @@ a {
     border-radius: 30px;
     background-color: #F8F8F8;
     box-shadow: 0px 15px 4px rgba(0, 0, 0, 0.25);
-    width: 60vw;
+    width: 55vw;
     max-width: 100%;
-    min-height: 500px;
+    min-height: 35vw;
     position: relative;
     overflow: hidden;
 }
