--- a/main_css/index.css
+++ b/main_css/index.css
@@ -55,6 +55,7 @@ body {
 .logo {
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 }
 
 /* logo font and size */
@@ -157,7 +158,7 @@ input {
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
-    width: 80%;
+    width: 90%;
 }
 
 input[type="checkbox"] {
